# picachu-object-service

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  application.py  config.py  docker-compose.yml  pyproject.toml
basic_model_binding/: message_packer.py  messages_traffic_controller.py
config/: model_config.py  rabbitmq_config.py
core/: model_base.py  model_result.py  model_result_producer.py  model_result_statuses.py
helpers/: s3_helper.py  s3_paths.py
infrastructure/rabbitmq/: rabbitmq_config_provider.py
model/: OBJECT_LABELS.csv  model_result_schema.py  object_model.py  processing_model_base.py
objects_model/: OBJECT_LABELS.csv  logic.py  model.py
