[tool.poetry]
name = "Object-model"
version = "0.1.0"
description = ""
authors = [
    "... <...>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.9"
pydantic = "^1.10.4"
boto3 = "^1.21.42"
boto3-stubs-lite = "^1.26.8"
opencv-python-headless = "^4.6.0.66"
pillow = "^9.3.0"
scikit-learn = "^1.1.3"
transformers = "^4.24.0"
pika = "^1.3.1"
pandas = "^1.5.3"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"
pylint-quotes = "^0.2.3"
pylint-flask = "^0.6"
pylint-flask-sqlalchemy = "^0.2.0"
pylint-exit = "^1.2.0"
